temporary min width to avoid layout issues until smaller screen size can be properly addressed

--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -2,6 +2,11 @@
 $m-forum-grid: 10px 0 30px 0    // margin on primary forum grid
 $p-forum-grid: 15px             // padding for forum grid
 
+// TEMPORARY Setting temporary min width on body until we can properly address smaller screensize layout
+body
+    min-width: 800px
+// END TEMPORARY
+
 body
     color: $c-copy
 h3.forum
